--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -2,8 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <link rel="icon" href="%sveltekit.assets%/character-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#FFC700" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <title>Puzzle Bets</title>
+    <meta
+      name="description"
+      content="Play in competitive Wordle matches with friends"
+    />
+    <meta property="og:title" content="Puzzle Bets" />
+    <meta
+      property="og:description"
+      content="Play in competitive Wordle matches with friends"
+    />
+    <meta property="og:image" content="%sveltekit.assets%/character-logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
