--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <body data-sveltekit-preload-data="hover" class="fixed">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
