--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -5,9 +5,13 @@
     <link rel="icon" href="%sveltekit.assets%/character-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffc700" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
     <title>Puzzle Bets</title>
+
     <meta
       name="description"
       content="Play in competitive Wordle matches with friends"
@@ -21,7 +25,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="fixed">
+  <body data-sveltekit-preload-data="hover" class="fixed bg-pb-yellow">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
