--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/character-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ffc700" />
+
+    <meta name="theme-color" content="#FFC700" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
@@ -23,9 +25,10 @@
     />
     <meta property="og:image" content="%sveltekit.assets%/character-logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
+
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" class="fixed bg-pb-yellow">
+  <body data-sveltekit-preload-data="hover" class="fixed">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
