Add FC frame meta tag

--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -19,12 +19,15 @@
       content="Play in competitive Wordle matches with friends"
     />
     <meta property="og:title" content="Puzzle Bets" />
+
     <meta
       property="og:description"
       content="Play in competitive Wordle matches with friends"
     />
     <meta property="og:image" content="%sveltekit.assets%/character-logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
+
+    <meta name="fc:frame" content="Puzzle Bets - Play and Bet with friends" />
 
     %sveltekit.head%
   </head>
