Try frame sdk fix

--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -27,6 +27,8 @@
     <meta property="og:image" content="%sveltekit.assets%/character-logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
 
+    <script src="https://cdn.jsdelivr.net/npm/@farcaster/frame-sdk/dist/index.min.js"></script>
+
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover" class="fixed">
