--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -18,14 +18,36 @@
       name="description"
       content="Play in competitive Wordle matches with friends"
     />
+
     <meta property="og:title" content="Puzzle Bets" />
 
     <meta
       property="og:description"
       content="Play in competitive Wordle matches with friends"
     />
-    <meta property="og:image" content="%sveltekit.assets%/character-logo.png" />
+    <meta
+      property="og:image"
+      content="%sveltekit.assets%/home-splash-landscape.png"
+    />
     <meta name="twitter:card" content="summary_large_image" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://puzzlebets.com" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:image:alt"
+      content="Puzzle Bets - Competitive Wordle matches"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="%sveltekit.assets%/home-splash-landscape.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Puzzle Bets - Competitive Wordle matches"
+    />
 
     %sveltekit.head%
   </head>
