Add frame links and link previews for games

--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -3,21 +3,17 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Puzzle Bets</title>
-
     <link rel="icon" href="%sveltekit.assets%/character-logo.png" />
-    <meta name="description" content="Play in competitive Wordle matches with friends" />
-    <meta property="og:title" content="Puzzle Bets" />
-    <meta property="og:description" content="Play in competitive Wordle matches with friends" />
-    <meta property="og:image" content="%sveltekit.assets%/home-splash-landscape.png" />
+
+    <meta property="og:image" data-default content="%sveltekit.assets%/home-splash-landscape.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://puzzlebets.com" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Puzzle Bets - Competitive Wordle matches" />
+    <meta property="og:image:alt" data-default content="Puzzle Bets - Competitive Wordle matches" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="%sveltekit.assets%/home-splash-landscape.png" />
-    <meta name="twitter:image:alt" content="Puzzle Bets - Competitive Wordle matches" />
+    <meta name="twitter:image" data-default content="%sveltekit.assets%/home-splash-landscape.png" />
+    <meta name="twitter:image:alt" data-default content="Puzzle Bets - Competitive Wordle matches" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FFC700" />
