Use og image for joining games

--- a/packages/client/src/app.html
+++ b/packages/client/src/app.html
@@ -5,9 +5,8 @@
 
     <link rel="icon" href="%sveltekit.assets%/character-logo.png" />
 
-    <meta property="og:image" data-default content="%sveltekit.assets%/home-splash-landscape.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://puzzlebets.com" />
+    <meta property="og:url" content="https://puzzlebets.xyz" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" data-default content="Puzzle Bets - Competitive Wordle matches" />
